--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kyro Reports</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -20,10 +21,22 @@
             <section class="section">
                 <h2>Create Template</h2>
                 <input type="text" id="templateName" placeholder="Template name">
-                <div id="fieldsContainer">
-                    <input type="text" class="field-input" placeholder="Field name">
-                </div>
-                <button onclick="addField()">+ Add Field</button>
+
+                <h3>Metadata</h3>
+                <div id="metadataContainer"></div>
+                <button onclick="addMetadata()">+ Add Metadata</button>
+
+                <h3>Columns</h3>
+                <div id="columnsContainer"></div>
+                <button onclick="addColumn()">+ Add Column</button>
+
+                <h3>Rows</h3>
+                <div id="rowsContainer"></div>
+                <button onclick="addRow()">+ Add Row</button>
+
+                <h3>Preview</h3>
+                <div id="preview" class="preview"></div>
+
                 <button onclick="createTemplate()">Download Template</button>
             </section>
         </main>
@@ -31,20 +44,20 @@
         <main id="compilerSection" class="hidden">
             <section class="section">
                 <h2>1. Upload Template</h2>
-                <div class="drop-zone" id="templateDropZone">
-                    <input type="file" id="templateInput" accept=".xlsx" hidden>
-                    <p>Drop template .xlsx or click to browse</p>
+                <div class="upload-row">
+                    <input type="file" id="templateInput" accept=".xlsx">
+                    <div id="templateInfo" class="file-info hidden"></div>
                 </div>
-                <div id="templateInfo" class="file-info hidden"></div>
             </section>
 
             <section class="section">
                 <h2>2. Upload Reports</h2>
-                <div class="drop-zone" id="reportsDropZone">
-                    <input type="file" id="reportsInput" accept=".xlsx" multiple hidden>
-                    <p>Drop report .xlsx files or click to browse</p>
+                <div class="upload-row">
+                    <input type="file" id="reportsInput" accept=".xlsx">
+                    <button onclick="addReportFile()">+ Add File</button>
                 </div>
                 <div id="reportsList" class="hidden"></div>
+                <div id="validationErrors" class="validation-errors hidden"></div>
             </section>
 
             <section class="section">
